# cpu-renderer

./: CMakeLists.txt  README.md
lib/win32/x86/: SDL2_ttf.lib
lib/win32/x86/SDL2/: SDL2-static.lib  SDL2.lib  SDL2main.lib
src/: bunny.h  camera.cpp  camera.h  common.h  main.cpp  mesh.cpp  mesh.h  rasterizer.cpp  rasterizer.h  renderer.cpp  renderer.h
